# mindly_dock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/device_manager/: device_manager.cpp  device_manager.h
src/gui_manager/: gui_manager.cpp  gui_manager.h
src/profile_manager/: profile_manager.cpp  profile_manager.h
